--- a/src/app/light-controller/light-controller-component.html
+++ b/src/app/light-controller/light-controller-component.html
@@ -4,4 +4,10 @@
   <label [text]="'UUID:' + deviceUUID" class="h2 text-primary text-center"></label>
 
   <button text="Rainbow" (tap)="showRainbow()"></button>
+
+  <StackLayout>
+    <label [text]="transcription.text"></label>
+    <button (tap)="triggerListening()" text="Start Listening"></button>
+    <button (tap)="stopListening()" text="Stop Listening"></button>
+  </StackLayout>
 </StackLayout>
