--- a/src/app/mip-scan/mip-scan.component.css
+++ b/src/app/mip-scan/mip-scan.component.css
@@ -1,3 +1,34 @@
-.mip {
+.action-bar {
+  background-color: black;
+  border-width: 1;
+  border-color: black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20;
+  color: black;
+}
 
+.button-rounded {
+  border-radius: 150;
+  height: 250;
+  width: 250;
+  border-width: 15;
+  color: white;
+  font-size: 40;
+  font-weight: bold;
+}
+
+.button-mip {
+  background-color: #f0c64c;
+  border-color: #edb007;
+  margin: 50 0;
+}
+
+.button-light {
+  background-color: #f22646;
+  border-color: #bd3541;
+}
+
+.page {
+  background-color: black;
 }
