--- a/src/app/mip-scan/mip-scan.component.html
+++ b/src/app/mip-scan/mip-scan.component.html
@@ -1,15 +1,6 @@
-<ActionBar title="Mip Scanner" class="action-bar"> </ActionBar>
+<ActionBar class="action-bar"></ActionBar>
 
 <StackLayout class="page">
-  <Label *ngIf="!isBluetoothEnabled" text="Please enable bluetooth" class="text-danger text-center h2"></Label>
-
-  <StackLayout *ngIf="isBluetoothEnabled">
-    <ListView [items]="devices" (itemTap)="onItemTap(event)" class="list-group">
-      <ng-template let-device="item">
-        <Button [text]="device.name" (tap)="connect(device.UUID)" class="btn btn-primary btn-grey"></Button>
-      </ng-template>
-    </ListView>
-
-    <Button text="Scan" (tap)="scan()" class="btn btn-primary" width="75%"></Button>
-  </StackLayout>
+  <button text="MIP" (tap)="connectMip('1C:05:21:4C:5E:04')" class="button-rounded button-mip"></button>
+  <button text="LIGHT" (tap)="connectLight('FC:58:FA:C1:76:47')" class="button-rounded button-light"></button>
 </StackLayout>
